// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Global Header matches the snapshot (desktop) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 100%;
}

.c2 > * + * {
  margin-left: var(--spacing-1x);
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #012639;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size-3x);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: var(--spacing-1x) var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  font-weight: var(--font-bold);
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > * {
  height: 100%;
}

<header
  class="c0"
>
  <a
    aria-label="Home"
    class="c1"
    data-testid="logo-react-router-link"
    href="/"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      icon-name="logo-equisoft-reversed"
      style="height: 24px;"
    />
  </a>
  <div
    class="c2"
  >
    Hello, World!
  </div>
</header>
`;

exports[`Global Header matches the snapshot (mobile) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  background-color: #FFFFFF;
  box-shadow: 0 6px 10px 0 rgb(0 0 0 / 0.2);
  height: calc(100vh - 56px);
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  position: fixed;
  top: 56px;
  -webkit-transform: translate(100%);
  -ms-transform: translate(100%);
  transform: translate(100%);
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
  width: 100%;
  z-index: 100;
}

.c5 > .c5 {
  height: 100%;
  top: 0;
}

.c4 {
  margin: 0;
  padding: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #012639;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size-3halfx);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  font-weight: var(--font-bold);
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > * {
  height: 100%;
}

<header
  class="c0"
>
  <a
    aria-label="Home"
    class="c1"
    data-testid="logo-react-router-link"
    href="/"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      icon-name="logo-equisoft-reversed"
      style="height: 100%;"
    />
  </a>
  <button
    aria-controls="menu-drawer"
    aria-expanded="false"
    aria-label="Navigation"
    class="c2 c3 c4"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="20"
      icon-name="menu"
      width="20"
    />
  </button>
  <div
    aria-hidden="true"
    class="c5 c6"
    id="menu-drawer"
    origin="right"
    width="100%"
  >
    <p>
      Test
    </p>
  </div>
</header>
`;

exports[`Global Header mobileDrawerContent prop adds a side drawer and burger button in mobile 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  background-color: #FFFFFF;
  box-shadow: 0 6px 10px 0 rgb(0 0 0 / 0.2);
  height: calc(100vh - 56px);
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  position: fixed;
  top: 56px;
  -webkit-transform: translate(100%);
  -ms-transform: translate(100%);
  transform: translate(100%);
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
  width: 100%;
  z-index: 100;
}

.c5 > .c5 {
  height: 100%;
  top: 0;
}

.c4 {
  margin: 0;
  padding: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #012639;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size-3halfx);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  font-weight: var(--font-bold);
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > * {
  height: 100%;
}

<header
  class="c0"
>
  <a
    aria-label="Home"
    class="c1"
    data-testid="logo-react-router-link"
    href="/"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      icon-name="logo-equisoft-reversed"
      style="height: 100%;"
    />
  </a>
  <button
    aria-controls="menu-drawer"
    aria-expanded="false"
    aria-label="Navigation"
    class="c2 c3 c4"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="20"
      icon-name="menu"
      width="20"
    />
  </button>
  <div
    aria-hidden="true"
    class="c5 c6"
    id="menu-drawer"
    origin="right"
    width="100%"
  >
    <p>
      Test
    </p>
  </div>
</header>
`;
